feat: Agregar autheticacion con JWT bearer y OpenAPI security
